--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
             let htmlTemp = `<div val = ${item["writeId"]} class="card mb-3" style="max-width: 540px;" >
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src= ${item["thumbnailUrl"]} class="card-img" alt="">
+                        <img src= ${item["thumbnailUrl"]} onerror="this.src='/static/bhstudio.jpg'" class="card-img" alt="">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
