--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -68,6 +68,7 @@
                     </div>
                 </div>
             </div>
+            <button type="button" class="btn btn-info" onclick="location.href='revise?writeId=${item["writeId"]}'">수정하기</button>
             `
             $("#goodsList").append(htmlTemp)
         }
