--- a/public/static/mystyle.css
+++ b/public/static/mystyle.css
@@ -67,6 +67,11 @@
     margin: 40px auto 20px auto;
     display: block;
 
+}
 
+.btn-info {
+
+    margin: 40px auto 20px auto;
+    display: block;
 
 }
