--- a/views/write.ejs
+++ b/views/write.ejs
@@ -64,7 +64,7 @@
             let pw = $("#pw").val()
 
             console.log(title, url, story)
-            if (title == "" || url == "" || story == "") {
+            if (title == "" || url == "" || story == "" || pw == "") {
                 alert("빈값이 있어요.")
             } else {
                 $.ajax({
